--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<div class="container container-fluid">
+<div class="container-fluid">
 {% block additional_messages %}{% endblock %}
 {% if book %}
 <div class="show-book-container">
