--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -42,7 +42,7 @@
                 <span class="fa fa-star"></span>
                 {% endfor %}
             </div>
-	    {% elif book.ext_infos %}
+	    {% elif book.ext_infos and book.avg_ext_rating %}
             <div class="overlay-rate">
                 {% for _ in range( book.avg_ext_rating|round|int() ) %}
                 <span class="fa fa-star"></span>
