--- a/manga_db/webGUI/templates/edit_info.html
+++ b/manga_db/webGUI/templates/edit_info.html
@@ -1,7 +1,7 @@
 {% extends "book.html" %}
 {% block book_info %}
 <div class="row no-margin">
-<div class="book-cover-container col-md-2 col-sm-12 no-padding">
+<div class="book-cover-container col-md-4 col-sm-12">
 {% if book.id is not none %}
 	<img alt="{{ book.title }}" class="book-cover
 	img-responsive" src={{ url_for('main.thumb_static',
