--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -470,6 +470,16 @@ select:-webkit-autofill:focus {
     margin-left: 0!important;
     margin-right: 0!important;
 }
+.book-grid-item-container {
+    display: inline-grid;
+    justify-items: center;
+    justify-content: center;
+    align-items: stretch;
+    align-content: stretch;
+    /* grid-template-rows: 85% 15%; /1* manga cover takes 80% title 20% of height *1/ */
+    grid-template-rows: auto 50px; /* 2*line-height of book-grid-item-title + 5px top and bot margin */
+    margin-bottom: 5px;
+}
 .book-grid-item {
     margin: .2rem;
      /* setting min-width needed otherwise we get weird loading behaviour with
@@ -535,6 +545,32 @@ select:-webkit-autofill:focus {
     /* fill full w+h so img can as well */
     width: 100%;
     height: 100%;
+    -webkit-border-radius: 10px;
+    -khtml-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+    overflow: hidden; /* needed for rounded corners with border-radius */
+}
+.book-grid-item-inner:after {
+    position: absolute;
+    content: '';
+    border-bottom: 3px solid rgba(68, 166, 242, 1);
+    width: 100%;
+    border-radius: 10px;
+    /* transform: translateX(-20%); */
+    bottom: 0;
+    left: 0;
+}
+.book-grid-item.read .book-grid-item-inner:after {
+    border-color: #31c131!important;
+}
+.book-grid-item.reading .book-grid-item-inner:after {
+    border-color: #ffe000!important;
+}
+.book-grid-item:hover .book-grid-item-inner:after {
+    border: none;
 }
 .book-grid-item .overlay {
     display: none;
@@ -591,17 +627,24 @@ select:-webkit-autofill:focus {
     color: #2d2d2d!important;
 }
 .book-grid-item-title {
-    position: absolute;
-    bottom: 0;
+    /* for cover overlayed with title at bottom */
+    /* position: absolute; */
+    /* bottom: 0; */
     text-align: center;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     color: #fff;
-    font-size: 12px;
+    font-size: 14px;
     width: 100%;
-    height: 30px;
-    line-height: 30px;
-    background: rgba(0,0,0,.75);
+    /* height: 30px; */
+    /* max-height: 70px; */
+    line-height: 20px;
+    /* background: rgba(0,0,0,.75); */
+    /* background: linear-gradient(to top, hsla(0, 0%, 0%, 0.8), transparent); */
+    /* for aligning title at the bottom of the container */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: flex-end; */
 }
 .book-grid-item:hover .book-grid-item-title {
     display: none;
@@ -609,18 +652,12 @@ select:-webkit-autofill:focus {
 .book-grid-item-title .title {
     text-align: center;
     overflow: hidden;
-    white-space: nowrap;
+    white-space: normal; /* nowrap */
     text-overflow: ellipsis;
     display: block;
-}
-.book-grid-item .book-grid-item-title {
-    border-top: 2px solid #44a6f2;
-}
-.book-grid-item.read .book-grid-item-title {
-    border-color: #31c131!important;
-}
-.book-grid-item.reading .book-grid-item-title {
-    border-color: #ffe000!important;
+    max-height: 40px; /* 2*line-height of book-grid-item-title ? */
+    /* padding: 5px 0; */
+    margin: 5px 0;
 }
 /* src: https://www.cssportal.com/css-ribbon-generator/ */
 .ribbon.fav {
